<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="app_title">Real Estate Manager</string>
    <string name="add_a_new_property">Add a new Property</string>
    <string name="photo_from_gallery">Photo from Gallery</string>
    <string name="photo_from_camera">Photo from Camera</string>
    <string name="video_from_gallery">Video from Gallery</string>
    <string name="video_from_camera">Video from Camera</string>
    <string name="type_of_property">Type of Property</string>
    <string name="price">Price</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="surface_of_property_in_m">Surface of property in m²</string>
    <string name="description_of_the_property">Description of the property</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="postcode">PostCode</string>
    <string name="name_and_number_of_street">Name and Number of street</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="school">School</string>
    <string name="university">University</string>
    <string name="parks">Parks</string>
    <string name="sports_clubs">Sports clubs</string>
    <string name="stations">Stations</string>
    <string name="shopping_centre">Shopping centre</string>
    <string name="save">Save</string>
    <string name="is_sold">Is sold</string>
    <string name="update_property">Update a Property</string>
    <string name="save_change">Save change</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="surface">Surface</string>
    <string name="number_rooms">Number of rooms</string>
    <string name="number_bathrooms">Number of bathrooms</string>
    <string name="number_bedrooms">Number of bedrooms</string>
    <string name="add_media">Add Media</string>
    <string name="sold">Sold</string>
    <string name="add_media_guide">Add media first and then change their orders as you like</string>
    <string name="location">Location</string>
    <string name="property_sold_since_the_selected_date">Property sold since the selected date</string>
    <string name="property_put_up_for_sale_from_the_selected_date">Property put up for sale from the selected date</string>
    <string name="choose_a_price_range">Choose a price range</string>
    <string name="choose_a_surface_area_range_in_m">Choose a surface area range in m²</string>
    <string name="choose_the_minimum_number_of_media">Choose the minimum number of media</string>
    <string name="filter">Filter</string>
    <string name="agent_in_charge_of_this_property">Agent in charge of this property</string>
    <string name="sports_n_clubs">Sports \n clubs</string>
    <string name="shopping_n_centre">Shopping \n centre</string>
    <string name="description_of_the_photo">Description of the Photo</string>
    <string name="description_of_the_video">Description of the Video</string>
    <string name="map">map</string>
    <string name="filter_properties">Filter properties</string>
    <string name="maison" translatable="false">Maison</string>
    <string name="logement" translatable="false">Logement</string>
    <string name="field_empty">Field can\'t be empty</string>
    <string name="no_result_change_filters">No results, change filters</string>
    <string name="select_a_date">Select a date</string>
    <string name="minimum_media">minimum media</string>
    <string name="property_successfully_added">Property successfully added</string>
    <string name="good_luck">Good luck with the sale !</string>
    <string name="add_at_least_one_media">Add at least one media</string>
    <string name="valid_connection">Valid Internet connection</string>
    <string name="no_connection">No Internet connection</string>
    <string-array name="PropertiesAgents">
        <item>Mike</item>
        <item>Alex</item>
        <item>Eric</item>
    </string-array>
    <string-array name="Countries">
        <item>France</item>
        <item>United States</item>
        <item>England</item>
    </string-array>
    <string-array name="PropertiesTypes">
        <item>House</item>
        <item>Duplex</item>
        <item>Flat</item>
        <item>Penthouse</item>
    </string-array>
    <string-array name="initial_price_slider_values">
        <item>20000000</item>
        <item>80000000</item>
    </string-array>
    <string-array name="initial_surface_slider_values">
        <item>500</item>
        <item>1800</item>
    </string-array>
</resources>