<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_a_new_property"
        app:showAsAction="always"/>

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_mode_edit_24"
        android:title="@string/update_property"
        app:showAsAction="always"/>

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/filter_properties"
        app:showAsAction="ifRoom"/>

</menu>